# ical2org

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml  pr.yml
src/: converter.rs  datetime.rs  main.rs
