[package]
name = "ical2org"
description = "ical2org -- Convert ICAL format into org-mode"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://github.com/mmarx/ical2org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
chrono-tz = "0.8.1"
clap = { version = "4.1.1", features = ["derive", "cargo"] }
env_logger = "0.10.0"
ical = "0.7.0"
rrule = "0.10.0"
test-log = "0.2.11"
