[package]
name = "ical2org"
description = "ical2org -- Convert ICAL format into org-mode"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://github.com/mmarx/ical2org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
chrono-tz = "0.8.3"
clap = { version = "4.4.6", features = ["derive", "cargo"] }
env_logger = "0.10.0"
ical = "0.8.0"
iso8601 = { version = "0.6.1", features = ["chrono"] }
log = { version = "0.4.20", features = [ "max_level_debug", "release_max_level_info" ] }
rrule = "0.11.0"
test-log = "0.2.12"
